#235 POI 5.2.3 (#247)
* To Support latest version of Apache Poi
1. Modified POM dependencies of Apache POI to 5.2.3 from 4.1.2
2. Removed dependency ooxml-schemas & added dependency of poi-ooxml
3. Updated commons-compress version to 1.22 from 1.21
4. Modified code to remove usage of deprecated functions - setCellType, cellTypeEnum & getFontIndexAsInt
5. Ensured that all the test cases pass - Double Value in IssueB116Test had to be changed
6. Changed project version to 2.13.0-SNAPSHOT

* Removed Duplicate dependency of slf4j.version
* Change Gradle file dependencies - Not Tested
* Update XlsCommentAreaBuilder.java
* Typo
* remove not called method, version 2.13.0 also for Gradle
* set to pull_request only, so we don't have 4 checks

---------

Co-authored-by: Sivakumar